# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/cli/ohos_cli_executable.gni")

ohos_cli_executable("ohos-avsession-manager") {
  branch_protector_ret = "pac_ret"
  cli_config_file = "config.json"

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  cflags = [
    "-fPIC",
    "-g",
    "-Wall",
  ]
  
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
  cflags_cc = cflags

  sources = [
    "src/main.cpp",
    "src/utils.cpp",
  ]

  include_dirs = [
    "src",
    "//foundation/multimedia/av_session/interfaces/inner_api/native/session/include",
  ]

  deps = [
    "//foundation/multimedia/av_session/frameworks/native/session:avsession_client",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:wantagent_innerkits",
    "audio_framework:audio_client",
    "cJSON:cjson",
    "input:libmmi-client",
    "c_utils:utils",
  ]

  subsystem_name = "multimedia"
  part_name = "av_session"

  install_enable = true
  install_images = ["system"]
  relative_install_dir = "cli_tool/executable"
}