# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../config.gni")

ohos_shared_library("ohavsession") {
  install_enable = true

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    cfi_vcall_icall_only = true
    debug = false
  }

  include_dirs = [
    "include",
    "../../../interfaces/inner_api/native/session/include",
    "../../../interfaces/kits/c",
  ]

  cflags = [
    "-Wall",
    "-Werror",
  ]

  sources = [
    "src/OHAVMetadataBuilder.cpp",
    "src/OHAVSession.cpp",
    "src/OHAVSessionCallbackImpl.cpp",
  ]

  deps = [ "../session:avsession_client" ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:wantagent_innerkits",
    "audio_framework:audio_client",
    "c_utils:utils",
    "hilog:libhilog",
    "image_framework:image_native",
    "input:libmmi-client",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  innerapi_tags = [ "ndk" ]

  output_name = "ohavsession"
  output_extension = "so"
  subsystem_name = "multimedia"
  part_name = "av_session"
}
