# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../config.gni")
import("../../../castplus_cast_engine_part.gni")

ohos_shared_library("ohavsession") {
  install_enable = true

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    cfi_vcall_icall_only = true
    debug = false
  }

  include_dirs = [
    "include",
    "../../../interfaces/inner_api/native/session/include",
    "../../../interfaces/kits/c",
  ]

  cflags = [
    "-Wall",
    "-Werror",
  ]

  sources = [
    "src/OHAVCastController.cpp",
    "src/OHAVCastControllerCallbackImpl.cpp",
    "src/OHAVSessionPlaybackState.cpp",
    "src/OHAVMetadataBuilder.cpp",
    "src/OHAVSession.cpp",
    "src/OHAVSessionCallbackImpl.cpp",
    "src/OHAVMediaDescriptionBuilder.cpp",
    "src/OHAVMediaDescription.cpp",
    "src/OHAVUtils.cpp",
    "src/OHDeviceInfo.cpp",
  ]

  deps = [
    "../../common:avsession_common",
    "../session:avsession_client",
    "../../../utils:avsession_utils",
  ]

  external_deps = [
    "ability_base:configuration",
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:wantagent_innerkits",
    "audio_framework:audio_client",
    "c_utils:utils",
    "curl:curl_shared",
    "hilog:libhilog",
    "image_framework:image",
    "image_framework:image_native",
    "image_framework:pixelmap",
    "input:libmmi-client",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  if (castplus_cast_engine_enable) {
    cflags += [ "-DCASTPLUS_CAST_ENGINE_ENABLE" ]
    deps += [ "./../session:avsession_cast_client" ]
  }

  innerapi_tags = [ "ndk" ]

  output_name = "ohavsession"
  output_extension = "so"
  subsystem_name = "multimedia"
  part_name = "av_session"
}
