# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("avsession_client_config") {
  include_dirs = [
    "//foundation/multimedia/avsession_standard/frameworks/innerkitsimpl/native/session/include",
    "//foundation/multimedia/avsession_standard/services/session/ipc/include",
    "//foundation/multimedia/avsession_standard/interfaces/innerkits/native/session/include",
  ]
}

ohos_shared_library("avsession_client") {
  install_enable = true

  ipc_sources = [
    "//foundation/multimedia/avsession_standard/services/session/ipc/avsession_proxy.cpp",
    "//foundation/multimedia/avsession_standard/services/session/ipc/avsession_service_proxy.cpp",
    "//foundation/multimedia/avsession_standard/services/session/ipc/session_listener_stub.cpp",
  ]

  client_sources = [
    "src/av_meta_data.cpp",
    "src/avsession_manager.cpp",
    "src/avsession_manager_impl.cpp",
    "src/session_listener_client.cpp",
  ]

  sources = ipc_sources + client_sources

  public_configs = [ ":avsession_client_config" ]

  deps = [ "//utils/native/base:utils" ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "input:libmmi-client",
    "ipc:ipc_core",
    "multimedia_image_standard:image_native",
    "samgr_standard:samgr_proxy",
  ]

  subsystem_name = "multimedia"
  part_name = "multimedia_avsession_standard"
}
