# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")

ohos_shared_library("avsession_napi") {
  include_dirs = [
    "include",
    "//foundation/multimedia/avsession_standard/interfaces/innerkits/native/session/include",
    "//foundation/multimedia/avsession_standard/frameworks/innerkitsimpl/native/session/include",
  ]

  sources = [ "src/napi_module.cpp" ]

  deps = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//foundation/arkui/napi:ace_napi",
    "//foundation/multimedia/avsession_standard/frameworks/innerkitsimpl/native/session:avsession_client",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "input:libmmi-client",
  ]

  relative_install_dir = "module/multimedia"

  subsystem_name = "multimedia"
  part_name = "multimedia_avsession_standard"
}