# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")

ohos_shared_library("avsession_napi") {
  include_dirs = [
    "include",
    "//foundation/multimedia/av_session/interfaces/innerkits/native/session/include",
    "//foundation/multimedia/av_session/frameworks/innerkitsimpl/native/session/include",
  ]

  sources = [
    "src/utils/avsession_napi_utils.cpp",
    "src/utils/uv_queue.cpp",
    "src/napi_module.cpp",
    "src/napi_avsession.cpp",
    "src/napi_avsession_manager.cpp",
    "src/napi_avsession_controller.cpp",
    "src/callback/napi_sessionlistener_callback.cpp",
    "src/callback/napi_avcontroller_callback.cpp",
    "src/callback/napi_avsession_callback.cpp",
     ]

  deps = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//foundation/arkui/napi:ace_napi",
    "//foundation/multimedia/av_session/frameworks/innerkitsimpl/native/session:avsession_client",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_manager",
    "ability_runtime:napi_base_context",
    "bundle_framework:appexecfwk_base",
    "hiviewdfx_hilog_native:libhilog",
    "input:libmmi-client",
    "ipc:ipc_core",
    "multimedia_image_standard:image_native",
    "samgr_standard:samgr_proxy",
    "distributeddataobject:distributeddataobject_impl",
    "safwk:system_ability_fwk",

  ]

  relative_install_dir = "module/multimedia"

  subsystem_name = "multimedia"
  part_name = "multimedia_av_session"
}
